- use (modified and improved) destatis lookup-algorithm (originally provided by Tobias Enderle) in perturbTable() - move lookup_procedures to functions (lookup_abs() and lookup_destatis()) - new helper-functions check_rkeys() and fix_negative_counts() - perturbTable() automatically uses the correct lookup procedure depending on the format of the provided pTable - updated imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,8 @@ importFrom(methods,slot)
 importFrom(methods,validObject)
 importFrom(primes,is_prime)
 importFrom(rlang,is_bare_integerish)
+importFrom(rlang,is_double)
+importFrom(rlang,is_integerish)
 importFrom(rlang,is_na)
 importFrom(rlang,is_scalar_atomic)
 importFrom(rlang,is_scalar_character)
@@ -30,6 +32,7 @@ importFrom(sdcTable,makeProblem)
 importFrom(sdcTable,sdcProb2df)
 importFrom(stats,addmargins)
 importFrom(stats,formula)
+importFrom(stats,runif)
 importFrom(stats,weights)
 importFrom(stats,xtabs)
 importFrom(utils,data)
