--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: cellKey
 Type: Package
-Date: 2018-04-17
+Date: 2018-06-07
 Title: Implementing ABS cell-key method for adding noise to frequency
         and continous tables
-Version: 0.7.0
+Version: 0.8.0
 Authors@R: c(
   person(given="Bernhard", family="Meindl", email="bernhard.meindl@statistik.gv.at", role=c("aut", "cre")))
 Description: This packages provides functionality to add noise to or rather perturb statistical tables.
@@ -15,6 +15,6 @@ RoxygenNote: 6.0.1
 Suggests: testthat, knitr, rmarkdown
 VignetteBuilder: knitr
 NeedsCompilation: no
-Packaged: 2018-04-15 22:10:12 UTC; bernhard
 Author: Bernhard Meindl [aut, cre]
 Maintainer: Bernhard Meindl <bernhard.meindl@statistik.gv.at>
+LazyData: true
