--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ exportClasses(pert_params)
 exportClasses(pert_table)
 exportMethods(mod_counts)
 exportMethods(mod_numvars)
+exportMethods(print)
 exportMethods(results)
 import(data.table)
 importFrom(digest,sha1)
@@ -28,6 +29,7 @@ importFrom(rlang,is_na)
 importFrom(rlang,is_scalar_atomic)
 importFrom(rlang,is_scalar_character)
 importFrom(rlang,is_scalar_integerish)
+importFrom(rlang,is_scalar_logical)
 importFrom(sdcTable,makeProblem)
 importFrom(sdcTable,sdcProb2df)
 importFrom(stats,addmargins)
