--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,18 @@
 Package: cellKey
 Type: Package
-Date: 2018-06-12
+Date: 2018-06-15
 Title: Implementing ABS cell-key method for adding noise to frequency
         and continous tables
-Version: 0.8.2
+Version: 0.9.0
 Authors@R: c(
-  person(given="Bernhard", family="Meindl", email="bernhard.meindl@statistik.gv.at", role=c("aut", "cre")))
+  person(
+    given="Bernhard", 
+    family="Meindl", 
+    email="bernhard.meindl@statistik.gv.at", 
+    role=c("aut", "cre")))
 Description: This packages provides functionality to add noise to or rather perturb statistical tables.
 Depends: data.table
-Imports: rlang, methods, primes, digest, sdcTable
+Imports: rlang, methods, primes, digest, sdcTable, data.tree
 License: GPL-2
 Encoding: UTF-8
 RoxygenNote: 6.0.1
