adding some checks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ importFrom(rlang,is_integerish)
 importFrom(rlang,is_na)
 importFrom(rlang,is_scalar_atomic)
 importFrom(rlang,is_scalar_character)
+importFrom(rlang,is_scalar_integer)
 importFrom(rlang,is_scalar_integerish)
 importFrom(rlang,is_scalar_logical)
 importFrom(sdcTable,makeProblem)
