--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,10 +19,6 @@ exportMethods(mod_counts)
 exportMethods(mod_numvars)
 exportMethods(print)
 import(data.table)
-importFrom(data.tree,FindNode)
-importFrom(data.tree,Node)
-importFrom(data.tree,Prune)
-importFrom(data.tree,Traverse)
 importFrom(digest,sha1)
 importFrom(methods,"slot<-")
 importFrom(methods,is)
@@ -40,6 +36,9 @@ importFrom(rlang,is_scalar_character)
 importFrom(rlang,is_scalar_integer)
 importFrom(rlang,is_scalar_integerish)
 importFrom(rlang,is_scalar_logical)
+importFrom(sdcTable,add_nodes)
+importFrom(sdcTable,create_node)
+importFrom(sdcTable,delete_nodes)
 importFrom(sdcTable,makeProblem)
 importFrom(sdcTable,sdcProb2df)
 importFrom(stats,addmargins)
