--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: cellKey
 Type: Package
-Date: 2018-06-22
+Date: 2018-07-04
 Title: Implementing ABS cell-key method for adding noise to frequency
         and continous tables
-Version: 0.10.2
+Version: 0.11.0
 Authors@R: c(
   person(
     given="Bernhard", 
@@ -12,7 +12,7 @@ Authors@R: c(
     role=c("aut", "cre")))
 Description: This packages provides functionality to add noise to or rather perturb statistical tables.
 Depends: data.table
-Imports: rlang, methods, primes, digest, sdcTable, data.tree
+Imports: rlang, methods, primes, digest, sdcTable (>= 0.23)
 License: GPL-2
 Encoding: UTF-8
 RoxygenNote: 6.0.1
