--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,3 +22,4 @@ NeedsCompilation: no
 Author: Bernhard Meindl [aut, cre]
 Maintainer: Bernhard Meindl <bernhard.meindl@statistik.gv.at>
 LazyData: true
+BugReports: https://github.com/sdcTools/cellKey/issues
