--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: cellKey
 Type: Package
-Date: 2018-07-04
+Date: 2018-07-06
 Title: Implementing ABS cell-key method for adding noise to frequency
         and continous tables
-Version: 0.11.0
+Version: 0.12.0
 Authors@R: c(
   person(
     given="Bernhard", 
@@ -16,9 +16,10 @@ Imports: rlang, methods, primes, digest, sdcTable (>= 0.23)
 License: GPL-2
 Encoding: UTF-8
 RoxygenNote: 6.0.1
-Suggests: testthat, knitr, rmarkdown
+Suggests: testthat, knitr, rmarkdown, ptable
 VignetteBuilder: knitr
 NeedsCompilation: no
 Author: Bernhard Meindl [aut, cre]
 Maintainer: Bernhard Meindl <bernhard.meindl@statistik.gv.at>
 LazyData: true
+BugReports: https://github.com/sdcTools/cellKey/issues
