--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,8 @@ importFrom(methods,new)
 importFrom(methods,slot)
 importFrom(methods,validObject)
 importFrom(primes,is_prime)
+importFrom(ptable,pt_create_pParams)
+importFrom(ptable,pt_create_pTable)
 importFrom(rlang,is_bare_integerish)
 importFrom(rlang,is_character)
 importFrom(rlang,is_double)
