new feature; allow custom pTables (user-defined perturbation functions)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(ck_add_nodes)
 export(ck_cont_table)
+export(ck_create_custom_pTable)
 export(ck_create_input)
 export(ck_create_node)
 export(ck_create_pTable)
@@ -11,6 +12,7 @@ export(ck_delete_nodes)
 export(ck_freq_table)
 export(ck_generate_rkeys)
 export(ck_generate_sTable)
+export(ck_update_custom_pTable)
 export(perturbTable)
 exportClasses(pert_inputdat)
 exportClasses(pert_params)
