new function ck_export_table()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(ck_create_pTable)
 export(ck_create_pert_params)
 export(ck_create_testdata)
 export(ck_delete_nodes)
+export(ck_export_table)
 export(ck_freq_table)
 export(ck_generate_rkeys)
 export(ck_generate_sTable)
