convenience-function ck_vignette() to open package vignette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(ck_export_table)
 export(ck_freq_table)
 export(ck_generate_rkeys)
 export(ck_generate_sTable)
+export(ck_vignette)
 export(perturbTable)
 exportClasses(pert_inputdat)
 exportClasses(pert_params)
@@ -55,4 +56,5 @@ importFrom(stats,quantile)
 importFrom(stats,runif)
 importFrom(stats,weights)
 importFrom(stats,xtabs)
+importFrom(utils,RShowDoc)
 importFrom(utils,data)
