--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(ck_export_table)
 export(ck_freq_table)
 export(ck_generate_rkeys)
 export(ck_generate_sTable)
+export(ck_rename_nodes)
 export(ck_vignette)
 export(perturbTable)
 exportClasses(pert_inputdat)
@@ -24,6 +25,7 @@ exportMethods(mod_numvars)
 exportMethods(print)
 exportMethods(summary)
 import(data.table)
+import(sdcHierarchies)
 importFrom(digest,sha1)
 importFrom(methods,"slot<-")
 importFrom(methods,is)
@@ -43,9 +45,6 @@ importFrom(rlang,is_scalar_character)
 importFrom(rlang,is_scalar_integer)
 importFrom(rlang,is_scalar_integerish)
 importFrom(rlang,is_scalar_logical)
-importFrom(sdcTable,add_nodes)
-importFrom(sdcTable,create_node)
-importFrom(sdcTable,delete_nodes)
 importFrom(sdcTable,makeProblem)
 importFrom(sdcTable,sdcProb2df)
 importFrom(stats,addmargins)
