--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,10 @@ cache: packages
 r:
 - release
 
-before_install:
-  - sudo apt-get install -y libglpk-dev
+addons:
+  apt:
+    packages:
+      - libglpk-dev
 
 r_github_packages:
   - jimhester/lintr
@@ -16,7 +18,7 @@ r_github_packages:
 
 after_success:
   - R CMD INSTALL $PKG_TARBALL
-  - Rscript -e 'lintr::lint_package()'
+  - Rscript -e 'lintr::lint_package(linters=with_defaults(line_length_linter(120), object_name_linter = NULL))'
   - Rscript -e 'covr::codecov()'
 
 before_deploy: Rscript -e 'remotes::install_cran("pkgdown")'
@@ -24,3 +26,8 @@ deploy:
   provider: script
   script: Rscript -e 'pkgdown::deploy_site_github()'
   skip_cleanup: true
+
+notifications:
+  email:
+    on_success: change
+    on_failure: change
