--- a/.travis.yml
+++ b/.travis.yml
@@ -29,5 +29,5 @@ deploy:
 
 notifications:
   email:
-    on_success: change
-    on_failure: change
+    on_success: always
+    on_failure: always
