update readme; move covr and pkgsdown to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ addons:
 r_github_packages:
   - jimhester/lintr
   - sdcTools/ptable
+  - r-lib/covr
+  - r-lib/pkgdown
 
 after_success:
   - R CMD INSTALL $PKG_TARBALL
