--- a/.travis.yml
+++ b/.travis.yml
@@ -1,32 +1,34 @@
-# R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
-
 language: R
 sudo: false
-cache: packages
+cache:
+  - packages: true
 
-r:
-- release
+warnings_are_errors: true
+r_check_args: "--as-cran"
 
-addons:
-  apt:
-    packages:
-      - libglpk-dev
+before_install:
+  - sudo apt-get update
+  - sudo apt-get install -y libglpk-dev
 
-r_github_packages:
-  - jimhester/lintr
-  - sdcTools/ptable
-  - r-lib/covr
-  - r-lib/pkgdown
-
-after_success:
-  - R CMD INSTALL $PKG_TARBALL
-  - Rscript -e 'lintr::lint_package(linters=with_defaults(line_length_linter(120), object_name_linter = NULL))'
-  - Rscript -e 'covr::codecov()'
-
-deploy:
-  provider: script
-  script: Rscript -e 'pkgdown::deploy_site_github()'
-  skip_cleanup: true
+matrix:
+  include:
+  - r: release
+    r_github_packages:
+    - r-lib/covr
+    - r-lib/pkgdown
+    after_success:
+    - R CMD INSTALL $PKG_TARBALL
+    - Rscript -e 'covr::coveralls()'
+    - Rscript -e 'devtools::install(); devtools::test()'
+    deploy:
+      provider: script
+      script: Rscript -e 'pkgdown::deploy_site_github()'
+      skip_cleanup: true
+  - r: devel
+    after_success:
+    - R CMD INSTALL $PKG_TARBALL
+    - Rscript -e 'covr::coveralls()'
+    - Rscript -e 'devtools::install(); devtools::test()'
 
 notifications:
   email:
