--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,8 @@ Authors@R: c(
 Description: This packages provides functionality to add noise to or rather perturb statistical tables.
 Depends: R(>= 2.10), data.table, sdcHierarchies (>= 0.16)
 Imports: rlang, methods, primes, digest, sdcTable (>= 0.27), ptable (>= 0.1.9)
-Remotes: github::bernhard-da/sdcHierarchies
+Remotes: github::bernhard-da/sdcHierarchies, 
+  github::sdcTools/sdcTable@next
 License: GPL-2
 Encoding: UTF-8
 RoxygenNote: 6.1.1
