also lint roxygen documentation

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ matrix:
     - R CMD INSTALL $PKG_TARBALL
     - Rscript -e 'covr::coveralls()'
     - Rscript -e 'devtools::install(); devtools::test()'
+    - Rscript -e 'lintr::lint_package()'
     deploy:
       provider: script
       script: Rscript -e 'pkgdown::deploy_site_github()'
@@ -29,6 +30,7 @@ matrix:
     - R CMD INSTALL $PKG_TARBALL
     - Rscript -e 'covr::coveralls()'
     - Rscript -e 'devtools::install(); devtools::test()'
+    - Rscript -e 'lintr::lint_package()'
 
 notifications:
   email:
