--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,7 @@ Depends: R(>= 2.10), data.table, sdcHierarchies (>= 0.16)
 Imports: rlang, methods, primes, digest, sdcTable (>= 0.27), ptable (>= 0.1.9)
 Remotes: github::bernhard-da/sdcHierarchies, 
   github::sdcTools/sdcTable@next,
-  github::sdcTools/ptable
+  github::bernhard-da/ptable
 License: GPL-2
 Encoding: UTF-8
 RoxygenNote: 6.1.1
