use "free" instead of "custom" for the free format ptable specification

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,7 @@
 export(ck_cnt_measures)
 export(ck_cnt_measures_basic)
 export(ck_cont_table)
-export(ck_create_custom_pTable)
+export(ck_create_free_ptable)
 export(ck_create_input)
 export(ck_create_pTable)
 export(ck_create_pert_params)
@@ -12,7 +12,7 @@ export(ck_export_table)
 export(ck_freq_table)
 export(ck_generate_rkeys)
 export(ck_generate_sTable)
-export(ck_update_custom_pTable)
+export(ck_update_free_ptable)
 export(ck_vignette)
 export(perturbTable)
 exportClasses(pert_inputdat)
