--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,7 @@ export(ck_generate_rkeys)
 export(ck_generate_sTable)
 export(ck_update_free_ptable)
 export(ck_vignette)
-export(perturbTable)
+export(perturb_table)
 exportClasses(pert_inputdat)
 exportClasses(pert_params)
 exportClasses(pert_table)
