--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,13 +5,13 @@ export(ck_cnt_measures_basic)
 export(ck_cont_table)
 export(ck_create_free_ptable)
 export(ck_create_input)
-export(ck_create_pTable)
 export(ck_create_pert_params)
+export(ck_create_ptab)
 export(ck_create_testdata)
 export(ck_export_table)
 export(ck_freq_table)
 export(ck_generate_rkeys)
-export(ck_generate_sTable)
+export(ck_generate_stab)
 export(ck_update_free_ptable)
 export(ck_vignette)
 export(perturb_table)
