use sdcHierarchies correctly

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,7 +25,6 @@ exportMethods(mod_numvars)
 exportMethods(print)
 exportMethods(summary)
 import(data.table)
-import(sdcHierarchies)
 importFrom(digest,sha1)
 importFrom(methods,"slot<-")
 importFrom(methods,is)
@@ -45,6 +44,10 @@ importFrom(rlang,is_scalar_character)
 importFrom(rlang,is_scalar_integer)
 importFrom(rlang,is_scalar_integerish)
 importFrom(rlang,is_scalar_logical)
+importFrom(sdcHierarchies,hier_add)
+importFrom(sdcHierarchies,hier_create)
+importFrom(sdcHierarchies,hier_delete)
+importFrom(sdcHierarchies,hier_rename)
 importFrom(sdcTable,makeProblem)
 importFrom(sdcTable,sdcProb2df)
 importFrom(stats,addmargins)
