fix remotes and imports

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: cellKey
 Type: Package
-Date: 2019-01-20
+Date: 2019-03-11
 Title: Implementing ABS cell-key method for adding noise to frequency
         and continous tables
 Version: 0.16.0
@@ -12,7 +12,7 @@ Authors@R: c(
     role=c("aut", "cre")))
 Description: This packages provides functionality to add noise to or rather perturb statistical tables.
 Depends: R(>= 2.10), data.table
-Imports: rlang, methods, primes, digest, sdcTable (>= 0.26), ptable (>= 0.1.13), sdcHierarchies (>= 0.10.0)
+Imports: rlang, methods, primes, digest, sdcTable (>= 0.27), ptable (>= 0.1.13), sdcHierarchies (>= 0.17.0)
 License: GPL-2
 Encoding: UTF-8
 RoxygenNote: 6.1.1
@@ -21,7 +21,7 @@ Suggests:
     knitr,
     rmarkdown
 VignetteBuilder: knitr
-Remotes: bernhard-da/sdcTable@sdcHier
+Remotes: sdcTools/ptable
 NeedsCompilation: no
 Author: Bernhard Meindl [aut, cre]
 Maintainer: Bernhard Meindl <bernhard.meindl@statistik.gv.at>
