--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: cellKey
 Type: Package
-Date: 2019-03-12
+Date: 2019-05-02
 Title: Implementing ABS cell-key method for adding noise to frequency
         and continous tables
-Version: 0.16.1
+Version: 0.16.2
 Authors@R: c(
   person(
     given="Bernhard", 
@@ -12,7 +12,7 @@ Authors@R: c(
     role=c("aut", "cre")))
 Description: This packages provides functionality to add noise to or rather perturb statistical tables.
 Depends: R(>= 2.10), sdcHierarchies (>= 0.17.0), data.table
-Imports: rlang, methods, primes, digest, sdcTable (>= 0.27), ptable (>= 0.1.13)
+Imports: rlang, methods, primes, digest, sdcTable (>= 0.27), ptable (>= 0.2.0)
 License: GPL-2
 Encoding: UTF-8
 RoxygenNote: 6.1.1
@@ -21,7 +21,7 @@ Suggests:
     knitr,
     rmarkdown
 VignetteBuilder: knitr
-Remotes: sdcTools/ptable
+Remotes: bernhard-da/ptable
 NeedsCompilation: no
 Author: Bernhard Meindl [aut, cre]
 Maintainer: Bernhard Meindl <bernhard.meindl@statistik.gv.at>
