--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: cellKey
 Type: Package
-Date: 2019-07-19
+Date: 2019-08-21
 Title: Implementing ABS cell-key method for adding noise to frequency
         and continous tables
-Version: 0.17.1
+Version: 0.17.99
 Authors@R: c(
   person(
     given="Bernhard", 
@@ -18,7 +18,8 @@ Imports:
     digest,
     sdcTable (>= 0.27),
     ptable (>= 0.2.0),
-    cli
+    cli,
+    utils
 License: GPL-2
 Encoding: UTF-8
 RoxygenNote: 6.1.1
