--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(ck_generate_rkeys)
 export(ck_params_cnts)
 export(ck_params_nums)
 export(ck_setup)
+export(ck_simpleparams)
 export(ck_vignette)
 import(data.table)
 import(sdcHierarchies)
