allow to export perturbation inputs (for cnt- and numvars) as yamls in `ck_params_cnts()` and `ck_params_nums()` and read them with `ck_read_yaml()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(ck_flexparams)
 export(ck_generate_rkeys)
 export(ck_params_cnts)
 export(ck_params_nums)
+export(ck_read_yaml)
 export(ck_setup)
 export(ck_simpleparams)
 export(ck_vignette)
