--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Date: 2019-09-25
 Title: Implementing ABS cell-key method for adding noise to frequency
         and continous tables
-Version: 0.17.125
+Version: 0.17.130
 Authors@R: c(
   person(
     given="Bernhard", 
@@ -20,7 +20,8 @@ Imports:
     ptable (>= 0.2.0),
     cli,
     utils,
-    yaml
+    yaml,
+    parallel
 License: GPL-2
 Encoding: UTF-8
 RoxygenNote: 6.1.1
