--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: cellKey
 Type: Package
-Date: 2019-09-07
+Date: 2019-09-27
 Title: Implementing ABS cell-key method for adding noise to frequency
         and continous tables
-Version: 0.17.3
+Version: 0.18.0
 Authors@R: c(
   person(
     given="Bernhard", 
@@ -11,14 +11,17 @@ Authors@R: c(
     email="bernhard.meindl@statistik.gv.at", 
     role=c("aut", "cre")))
 Description: This packages provides functionality to add noise to or rather perturb statistical tables.
-Depends: R(>= 2.10), sdcHierarchies (>= 0.17.0), data.table
+Depends: R(>= 2.10), sdcHierarchies (>= 0.18.1), data.table
 Imports: 
     rlang,
     methods,
     digest,
-    sdcTable (>= 0.27),
+    sdcTable (>= 0.30),
     ptable (>= 0.2.0),
-    cli
+    cli,
+    utils,
+    yaml,
+    parallel
 License: GPL-2
 Encoding: UTF-8
 RoxygenNote: 6.1.1
@@ -27,7 +30,7 @@ Suggests:
     knitr,
     rmarkdown
 VignetteBuilder: knitr
-Remotes: bernhard-da/ptable
+Remotes: tenderle/ptable@exp
 NeedsCompilation: no
 Author: Bernhard Meindl [aut, cre]
 Maintainer: Bernhard Meindl <bernhard.meindl@statistik.gv.at>
