--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ r_github_packages:
 
 after_success:
   - R CMD INSTALL $PKG_TARBALL
-  - Rscript -e 'lintr::lint_package(linters=with_defaults(line_length_linter(120), object_name_linter = NULL))'
+  - Rscript -e 'library(lintr); lint_package(linters=with_defaults(line_length_linter(120), object_name_linter = NULL))'
   - Rscript -e 'covr::codecov()'
 
 deploy:
