--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,13 @@ r:
 apt_packages:
   - libglpk-dev
 
+r_packages:
+  - covr
+  - pkgdown
+  - lintr
+
 r_github_packages:
-  - jimhester/lintr
-  - bernhard-da/ptable
-  - r-lib/covr
-  - r-lib/pkgdown
+  - sdcTools/ptable
 
 after_success:
   - R CMD INSTALL $PKG_TARBALL
