fix imports, vignette and tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,8 @@ export(ck_simpleparams)
 export(ck_vignette)
 import(data.table)
 import(sdcHierarchies)
+importFrom(cli,cat_line)
+importFrom(cli,cat_rule)
 importFrom(digest,sha1)
 importFrom(methods,"slot<-")
 importFrom(methods,is)
