--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,12 +11,12 @@ Authors@R: c(
     email="bernhard.meindl@statistik.gv.at", 
     role=c("aut", "cre")))
 Description: This packages provides functionality to add noise to or rather perturb statistical tables.
-Depends: R(>= 2.10), sdcHierarchies (>= 0.18.1), data.table
+Depends: R(>= 4.1), sdcHierarchies (>= 0.19.3), data.table
 Imports: 
     rlang,
     methods,
     digest (>= 0.6.23),
-    sdcTable (>= 0.30),
+    sdcTable (>= 0.32.2),
     ptable (>= 0.3.3),
     cli,
     utils,
@@ -24,7 +24,7 @@ Imports:
     parallel
 License: GPL-2
 Encoding: UTF-8
-RoxygenNote: 7.1.1
+RoxygenNote: 7.2.0
 Suggests: 
     testthat,
     knitr,
@@ -35,5 +35,6 @@ NeedsCompilation: no
 Author: Bernhard Meindl [aut, cre]
 Maintainer: Bernhard Meindl <bernhard.meindl@statistik.gv.at>
 LazyData: true
+LazyDataCompression: xz
 BugReports: https://github.com/sdcTools/cellKey/issues
 URL: https://github.com/sdcTools/cellKey
