adjustments regarding ptable updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,8 +20,7 @@ importFrom(methods,is)
 importFrom(methods,new)
 importFrom(methods,slot)
 importFrom(methods,validObject)
-importFrom(ptable,pt_create_pParams)
-importFrom(ptable,pt_create_pTable)
+importFrom(ptable,create_ptable)
 importFrom(rlang,is_bare_integerish)
 importFrom(rlang,is_character)
 importFrom(rlang,is_double)
