--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,26 @@
 Package: cellKey
 Type: Package
-Date: 2023-03-03
-Title: Implementing ABS Cell-Key Method for Adding Noise to Frequency and Continuous Tables
+Date: 2023-03-09
+Title: Consistent Perturbation of Statistical Frequency- And Magnitude Tables
 Version: 1.0.0
 Authors@R: c(
   person(
     given="Bernhard", family="Meindl", 
     email="bernhard.meindl@statistik.gv.at", 
     role=c("aut", "cre")))
-Description: This packages provides functionality to add noise to or rather perturb statistical tables.
+Description: Data from statistical agencies and other institutions often
+    need to be protected before they can be published. This package 
+    can be used to perturb statistical tables in a consistent way. The
+    main idea is to add - at the micro data level - a record key for each
+    unit. Based on these keys, for any cell in a statistical table a
+    cell key is computed as a function on the record keys contributing to
+    a specific cell. Values that are added to the cell in order to perturb
+    it are derived from a lookup-table that maps values of cell keys to 
+    specific perturbation values. The theoretical basis for the methods 
+    implemented can be found in Thompson, Broadfoot and Elazar 
+    (2013) <https://unece.org/fileadmin/DAM/stats/documents/ece/ces/ge.46/2013/Topic_1_ABS.pdf>
+    which was extended and enhanced by Giessing and Tent 
+    (2019) <https://unece.org/fileadmin/DAM/stats/documents/ece/ces/ge.46/2019/mtg1/SDC2019_S2_Germany_Giessing_Tent_AD.pdf>.
 Depends: R(>= 4.1), sdcHierarchies (>= 0.19.3), data.table
 Imports: 
     rlang,
